feat: all issues fixed